--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ ul {
   text-align: center;
 }
 /* header */
+
 .header > .container {
   display: flex;
   align-items: center;
@@ -89,10 +90,11 @@ ul {
   list-style-type: none;
 }
 .contacts .contacts-item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 .header .address-link {
-  display: block;
+  display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -104,13 +106,41 @@ ul {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
+.header .address-link::before {
+  margin-right: 10px;
+  content: '';
+  width: 16px;
+  height: 16px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.address-link.mail::before {
+  background-image: url(../images/icons/envelope.svg);
+}
+.address-link.phone::before {
+  background-image: url(../images/icons/smartphone.svg);
+}
 .header .address-link:hover,
 .address-link:focus {
   color: var(--accent-color);
 }
 /* hero */
 .hero {
-  background-color: var(--heder-footer-bg);
+  height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/bg-Image.jpg);
+  background-color: #c4c4c4;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .hero > .container {
   padding-top: 200px;
@@ -135,6 +165,7 @@ ul {
 /* button */
 .hero .button {
   padding: 10px 32px;
+  margin-top: 30px;
 
   background-color: var(--accent-color);
   font-family: Roboto;
@@ -145,7 +176,6 @@ ul {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  margin-top: 40px;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -168,8 +198,30 @@ ul {
 .features-list .items:not(:last-child) {
   margin-right: 30px;
 }
+.features-list .items::before {
+  display: block;
+  content: '';
+  height: 120px;
+
+  background-color: var(--secondary-bg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 4px;
+}
+.features-list .items:nth-child(1)::before {
+  background-image: url(../images/icons/antenna.svg);
+}
+.features-list .items:nth-child(2)::before {
+  background-image: url(../images/icons/clock.svg);
+}
+.features-list .items:nth-child(3)::before {
+  background-image: url(../images/icons/diagram.svg);
+}
+.features-list .items:nth-child(4)::before {
+  background-image: url(../images/icons/astronaut.svg);
+}
 .features .title {
-  margin-top: 0;
+  margin-top: 30px;
   margin-bottom: 0px;
 
   color: var(--primary-text-color);
